--- a/Walkthought Tutorial/webapp/i18n/i18n.properties
+++ b/Walkthought Tutorial/webapp/i18n/i18n.properties
@@ -10,3 +10,6 @@ homePageTitle=Walkthrough
 helloPanelTitle=Hello World
 openDialogButtonText=Say Hello With Dialog
 dialogCloseButtonText=OK
+
+# Invoice List
+invoiceListTitle=Invoices
