--- a/Walkthought Tutorial/webapp/i18n/i18n.properties
+++ b/Walkthought Tutorial/webapp/i18n/i18n.properties
@@ -13,3 +13,6 @@ dialogCloseButtonText=OK
 
 # Invoice List
 invoiceListTitle=Invoices
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
